--- a/style.css
+++ b/style.css
@@ -41,3 +41,14 @@ nav {
     padding: 1rem;
     margin-right: 1rem;
 }
+
+.signup:hover {
+    transform: translate(-222px, 222px);
+}
+
+.fox:hover {
+    transform: translate(-222px, 222px);
+
+}
+
+
