--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ nav {
     transition-property: all;
     transition-duration: 2.5s;
     transition-delay: 0.25s;
+    transition-timing-function: ease-in-out;
 }
 
 .fox:hover {
