--- a/style2.css
+++ b/style2.css
@@ -11,6 +11,7 @@
     --MAIN-COLOR-1: rgb(0, 0 ,100);
     --MAIN-COLOR-2: rgb(0, 115, 200);
     --SECONDARY-COLOR: lime;
+    --GRID-COLUMNS: 3;
 }
 
 body {
@@ -20,6 +21,20 @@ body {
 header {
     position: sticky;
     top: 0;
+}
+
+.cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    /* display: grid;
+    grid-template-columns: repeat(var(--GRID-COLUMNS), 1fr); */
+}
+
+.cards > * {
+    flex-grow: 1;
+    flex-basis: 25%;
 }
 
 footer {
