--- a/calculator.css
+++ b/calculator.css
@@ -5,5 +5,80 @@
 }
 
 .calculator {
-    
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
+}
+
+.display {
+    grid-area: 1 / 1 / 2 / 5;
+}
+
+.clear {
+    grid-area: 2 / 1 / 3 / 3;
+}
+
+.backspace {
+    grid-area: 2 / 3 / 3 / 4;
+}
+
+.seven {
+    grid-area: 3 / 1 / 4 / 2;
+}
+
+.eight {
+    grid-area: 3 / 2 / 4 / 3;
+}
+
+.nine {
+    grid-area: 3 / 3 / 4 / 4;
+}
+
+.four {
+    grid-area: 4 / 1 / 5 / 2;
+}
+
+.five {
+    grid-area: 4 / 2 / 5 / 3;
+}
+
+.six {
+    grid-area: 4 / 3 / 5 / 4;
+}
+
+.one {
+    grid-area: 5 / 1 / 6 / 2;
+}
+
+.two {
+    grid-area: 5 / 2 / 6 / 3;
+}
+
+.three {
+    grid-area: 5 / 3 / 6 / 4;
+}
+
+.zero {
+    grid-area: 6 / 1 / 7 / 4;
+}
+
+
+.division {
+    grid-area: 2 / 4 / 3 / 5;
+}
+
+.multiplication {
+    grid-area: 3 / 4 / 4 / 5;
+}
+
+.subtraction {
+    grid-area: 4 / 4 / 5 / 5;
+}
+
+.addition {
+    grid-area: 5 / 4 / 6 / 5;
+}
+
+.equals {
+    grid-area: 6 / 4 / 7 / 5;
 }
