--- a/calculator.css
+++ b/calculator.css
@@ -4,14 +4,31 @@
     box-sizing: border-box;
 }
 
+main {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: black;
+}
+
 .calculator {
+    padding-top: 25px;
+    padding-bottom: 25px;
     display: grid;
+    gap: 3px;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: auto;
+    width: 500px;
 }
 
 .display {
     grid-area: 1 / 1 / 2 / 5;
+    text-align: right;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    color: white;
+    border: 5px solid;
+    border-image: linear-gradient(45deg, purple, limegreen) 1;
 }
 
 .clear {
@@ -82,3 +99,27 @@
 .equals {
     grid-area: 6 / 4 / 7 / 5;
 }
+
+button {
+    display: block;
+    /*margin-top: 1em;
+    margin-bottom: 1em;*/
+    padding-bottom: 1em;
+    padding-top: 1em;
+    color: white;
+    background-color: black;
+
+    width: 100%;
+    /*height: 100%;*/
+
+    border: 5px solid lime;
+    border-image: linear-gradient(45deg, purple, limegreen) 1;
+
+
+    border-radius: 3px;
+
+}
+
+
+
+
