--- a/glow.css
+++ b/glow.css
@@ -6,18 +6,20 @@
 
 body {
     background-color: black;
+    height: 100vh;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-evenly;
     align-content: center;
 }
 
 button {
-    margin: 5rem;
+    /* margin: 5rem; */
     padding: 5rem 5rem 5rem 5rem;
     font: 2rem sans-serif;
     background-color: cyan;
     box-shadow: 0 0 5px cyan, 
-    0 0 25px cyan;
+                0 0 25px cyan;
 }
 
 button:hover {
@@ -27,4 +29,10 @@ button:hover {
     0 0 50px cyan,
     0 0 100px cyan,
     0 0 200px cyan;
+}
+
+.box {
+    background-color: rebeccapurple;
+    color: aliceblue;
+    padding: 5rem 5rem 5rem 5rem;
 }
