--- a/glow.css
+++ b/glow.css
@@ -11,6 +11,7 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     align-content: center;
+    align-items: center;
 }
 
 button {
@@ -31,8 +32,42 @@ button:hover {
     0 0 200px cyan;
 }
 
+
 .box {
-    background-color: rebeccapurple;
+    background-color: blue;
     color: aliceblue;
     padding: 5rem 5rem 5rem 5rem;
+    width: 40vw;
+    position: relative;
+    transition: transform 2s;
+}
+
+
+.front {
+    background-color: rebeccapurple;
+    position: absolute;
+    color: aliceblue;
+    padding: 5rem 5rem 5rem 5rem;
+    width: 40vw;
+    transition: transform 2s;
+    top: 0;
+    left: 0;
+}
+
+.front:hover {
+    transform: rotate3d(0, 1, 0, 90deg);
+}
+
+.back {
+    background-color: red;
+    position: absolute;
+    color: aliceblue;
+    padding: 5rem 5rem 5rem 5rem;
+    width: 40vw;
+/*     rotate: y 90deg;
+ */    transition: transform 2s;
+}
+
+.back:hover {
+    transform: rotate3d(0, 1, 0, 90deg);
 }
