--- a/glow.css
+++ b/glow.css
@@ -66,6 +66,8 @@ button:hover {
     width: 40vw;
 /*     rotate: y 90deg;
  */    transition: transform 2s;
+    top: 0;
+    left: 0;
 }
 
 .back:hover {
